# tt3de

./: .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  dff.py  pyproject.toml  release-please-config.json  setup.py  testcompiledcode.py
.cursor/rules/: demos-standards.mdc  docs-standards.mdc  python-standards.mdc  rust-standards.mdc  testing-standards.mdc  textual-ui-helper.mdc  workflow-guardrails.mdc
.evolution/: evol-font-raster-loading-helpers.md  evol-glyph-shadow-collections.md  evol-lighting.md  evol-low-poly-uv-sphere-prefab.md  evol-remove-legacy-layers.md  evol-rust-core-pyo3-separation.md  evol-shader-math-normal.md  evol-texture-filtering.md  evol-transparency-depth-layers.md  evol-ttsl-fragment-normal.md  evol-ttsl-fragment-view-position.md
.evolution/done/: evol-low-poly-uv-sphere-prefab.md  evol-ttsl-fragment-normal.md  evol-ttsl-fragment-view-position.md
.evolution/draft/: evol-engine-profiling-benchmarks.md  evol-font-raster-loading-helpers.md  evol-glyph-shadow-collections.md  evol-lighting.md  evol-rust-core-pyo3-separation.md  evol-rust-render-context-unified-frame-buffers.md
.github/workflows/: ci.yml  docbuild.yml  fast-checks.yml  pypi.yml  python-app.yml  release-please.yml
benches/: all.rs  bench_bertex_buffer.rs  color_bench.rs  min_bench.rs
demos/: all.py  ttsl.py
demos/2d/: anim_points.py  bouncing_clock.py  cameratest.py  material_test.py  mini_rusty.py  standalone.py  textual_glm_2dnodes.py  texture_atlas.py  texture_tests.py  triangle_depth.py  ttsl_square.py
demos/3d/: .gitignore  city_01.py  city_02.py  cube.py  dust.py  polygon_fan.py  polygon_visualizer.py  some_models.py  textual_screen.py  triangle_test.py  ttsl_fog.py  ttsl_fog_glyph_shadows.py  ttsl_frag_depth_u_planes.py  ttsl_normal_viewpos.py  ttsl_texture_cube.py  ttsl_texture_cube_modes.py  ttsl_texture_half_block_cube.py
models/: cube.blend  sprite_sheet_32px.kra
python/tt3de/: asset_fastloader.py  asset_load.py  dev_material_bench_report.py  dev_regen_doc_screenshot.py  glm_camera.py  obj_loader.py  points.py  prefab3d.py  render_context_rust.py  richtexture.py  textual_standalone.py  textual_widget.py  tt3de.pyi  tt_2dnodes.py  tt_3dnodes.py  utils.py
scripts/: README.md  bench_material.ps1  bench_material.sh  bench_to_textual.sh  cargo_test.ps1  cargo_test.sh  dev_material_bench_report.py  dev_regen_doc_screenshot.py  dev_tt3de_screenshot.py  enrich_benchmark_json.py  gen_doc_example_screenshots.py  gen_opcodes.ps1  gen_opcodes.sh  regen_doc_screenshot.ps1  regen_doc_screenshot.sh
scripts/screenshot_apps/: __init__.py  canvas_bg.py  city_scene.py  dual_panel.py  multi_triangle.py  primitives_2d.py  primitives_3d.py  red_triangle.py  triple_panel.py  with_header.py
source/: conf.py  geometry_buffer.rst  high_level_api.rst  index.rst  low_level_api.rst  opcode_reference.md  ttsl.md  ttsl_compiler.md
source/_static/: style.css
source/_templates/: layout.html
src/: drawbuffer.rs  lib.rs  main.rs
src/drawbuffer/: blend.rs  drawbuffer.rs  glyphset.rs  mod.rs  segment_cache.rs
src/geombuffer/: mod.rs
src/material/: combo_material.rs  debug_mat.rs  materials.rs  materials_py.rs  mod.rs  noise.rs  shader_material.rs  textured.rs
src/primitiv_building/: line_clipping.rs  line_clipping_2d.rs  mod.rs  rectangle_clipping.rs  tomato_triangle_clipping.rs  triangle_3d.rs  triangle_clipping.rs
src/primitivbuffer/: mod.rs  primitiv_triangle.rs  primitivbuffer.rs  rect.rs
src/raster/: mod.rs  raster_line.rs  raster_line_columns.rs  raster_line_row.rs  raster_point.rs  raster_rect.rs  raster_triangle.rs  raster_triangle_tomato.rs  vertex.rs
src/stages/: clipping.rs  line_clipping.rs  mod.rs  point_clipping.rs
src/texturebuffer/: atlas_texture.rs  mod.rs  noise_texture.rs  texture_buffer.rs  toglyph_methods.rs  toglyph_methods_py.rs
src/ttsl/: mod.rs  opcodes.rs  ttslpy.rs
src/utils/: mod.rs
src/vertexbuffer/: mod.rs  transform_pack.rs  transform_pack_py.rs  uv_buffer.rs  vertex_buffer.rs  vertex_buffer_py.rs
tests/: bench_points.py  conftest.py  context.py  test_3Deng.py  test_GLMcamera.py  test_c_texture2D.py  test_c_triangle_buffer.py  test_camera.py  test_glm_faceforward.py  test_load_obj.py  test_maths.py  test_project.py  test_segmap.py  test_triangle_clipping.py  test_triangle_scanline.py  text3d_bench.py  textual_example.py  textual_fpscamera.py  textual_glm_camera.py  textual_glm_multiple.py
tests/benchs/: bench_draw.py  bench_points.py  bench_project.py  bench_render.py
tests/c_code/: test_c_triangle_buffer.py  test_geometry.py
tests/imgrender/: render_image.py
tests/rtt3de/: test_basics.py  test_r_draw_buffer.py  test_r_fullpass.py  test_r_geometry_buffer.py  test_r_material.py  test_r_mvp_projection.py  test_r_primitiv_buffer.py  test_r_raster.py  test_r_texture_buffer.py  test_r_vertex_buffer.py  test_utils.py
tests/tt3de/: test_demo_launcher.py  test_dummy.py  test_material_parallelism.py  test_prefab3d.py  test_r_draw_buffer.py  test_utils.py  (+11 more)
tt3de/: asset_fastloader.py  asset_load.py  glm_camera.py  prefab3d.py  pyglmtexture.py  render_context_cy.py  render_context_rust.py  richtexture.py  textual_widget.py  tt3de.py  tt_2dnodes.py  tt_3dnodes.py  utils.py
(+88 files in other folders)
