[package]
name = "tt3de"
version = "0.1.0"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "tt3de"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
nalgebra = "0.33.2"
nalgebra-glm = "0.19"
pyo3 = { version = "0.21.2", features = ["extension-module"] }
fastnoise-lite = "1.1.1"
rayon = "1.10.0"
once_cell = "1.20.3"


[dev-dependencies]
criterion = "0.4.0"
approx = "0.5.1"


[profile.dev]
debug = true

[profile.release]
opt-level = 3
