[package]
name = "tt3de"
version = "0.1.0"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "tt3de"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["lib"]

[dependencies]
nalgebra = "0.34.1"
nalgebra-glm = "0.20.0"
pyo3 = { version = "0.27.1", features = ["extension-module"] }
fastnoise-lite = "1.1.1"
rayon = "1.11.0"
once_cell = "1.20.3"


[dev-dependencies]
criterion = "0.7.0"
approx = "0.5.1"

[[bench]]
name = "all"
harness = false

[profile.dev]
debug = true

[profile.release]
opt-level = 3

[features]
default = ["python-binding"]
# declare a feature for building the Python bindings, activated by default
python-binding = []
