[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[project]
dependencies = ["pyglm>2.7.0", "pypng>=0.20220715.0", "textual>=6.6.0"]
description = "TT3DE: Tiny Textual 3D Engine"
name = "tt3de"
readme = "README.md"
version = "0.1.2"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
python-source = "python/"

[tool.poetry]
authors = ["fanf <fanf@fanf>"]
description = ""
name = "tt3de"
readme = "README.md"
version = "0.1.2"

[tool.poetry.dependencies]
pyglm = "^2.7.1"
pypng = "^0.20220715.0"
python = "^3.11"
textual = "^6.6.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
furo = "^2025.9.25"
groundwork-sphinx-theme = "^1.1.1"
isort = "^5.13.2"
maturin = "^1.6.0"
myst-parser = "^4.0.1"
pillow = "^10.3.0"
pre-commit = "^4.1.0"
pyinstrument = "^4.6.2"
pytest = "^8.2.1"
pytest-benchmark = "^4.0.0"
requests = "^2.32.3"
ruff = "^0.9.9"
setuptools = "^80.9.0"
sphinx = "^8.2.3"
sphinx-book-theme = "^1.1.4"
sphinx-rtd-theme = "^3.0.2"
