[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[dependency-groups]
dev = [
  "black>=24.4.2",
  "cairosvg>=2.7.0",
  "furo>=2025.9.25",
  "groundwork-sphinx-theme>=1.1.1",
  "isort>=5.13.2",
  "maturin>=1.6.0",
  "myst-parser>=4.0.1",
  "pillow>=10.3.0",
  "pre-commit>=4.1.0",
  "pyinstrument>=4.6.2",
  "pytest-benchmark>=4.0.0",
  "pytest>=8.2.1",
  "requests>=2.32.3",
  "ruff>=0.9.9",
  "setuptools>=80.9.0",
  "sphinx-book-theme>=1.1.4",
  "sphinx-rtd-theme>=3.0.2",
  "sphinx>=8.2.3"
]

[project]
dependencies = ["pyglm>2.7.0", "pypng>=0.20220715.0", "textual>=6.6.0"]
description = "TT3DE: Tiny Textual 3D Engine"
name = "tt3de"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.2"

[project.scripts]
tt3de-gen-opcodes = "tt3de.ttsl.ttisa.low_level_def:main"
tt3de-regen-doc-screenshot = "tt3de.dev_regen_doc_screenshot:main"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
python-source = "python/"
