[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[dependency-groups]
dev = [
  "black>=24.4.2",
  "furo>=2025.9.25",
  "groundwork-sphinx-theme>=1.1.1",
  "isort>=5.13.2",
  "maturin>=1.6.0",
  "myst-parser>=4.0.1",
  "pillow>=10.3.0",
  "pre-commit>=4.1.0",
  "pyinstrument>=4.6.2",
  "pytest-benchmark>=4.0.0",
  "pytest>=8.2.1",
  "requests>=2.32.3",
  "rich>=15.0.0",
  "ruff>=0.9.9",
  "setuptools>=80.9.0",
  "sphinx-book-theme>=1.1.4",
  "sphinx-rtd-theme>=3.0.2",
  "sphinx>=8.2.3",
]

[project]
dependencies = ["pyglm>2.7.0", "pypng>=0.20220715.0", "textual[syntax]>=6.6.0"]
description = "TT3DE: Tiny Textual 3D Engine"
name = "tt3de"
readme = "README.md"
requires-python = ">=3.11"
version = "1.0.0"

[tool.maturin]
# Links like a Python extension (no libpython); must stay off for plain `cargo test`.
features = ["extension-module"]
python-source = "python/"
